<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundPrimary"
    android:clickable="true"
    tools:context=".presentation.register.phoneNumber.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="100dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="?attr/colorTextSecondary"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="?attr/colorTextPrimary"
            android:textSize="70sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/layout_rounded_grey_text_box"
            android:hint="@string/type_username"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/layout_rounded_grey_text_box"
            android:hint="@string/type_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/layout_counter_rounded_green"
            android:paddingLeft="35sp"
            android:paddingRight="35sp"
            android:text="login"
            android:textAllCaps="false"
            android:textColor="?attr/colorButtonText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp"
            android:text="@string/new_user"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>