<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundPrimary"
    android:clickable="true"
    tools:context=".presentation.register.phoneNumber.RegisterPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textColor="?attr/colorTextPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/enter_phone_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/tv_phone_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/phone_number_prefix"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/tv_phone_prefix"
                    android:background="@drawable/layout_rounded_grey_text_box"
                    android:hint="Type here..."
                    android:padding="10dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <!--Continue Button layout-->
        <LinearLayout
            android:id="@+id/ll_continue_button"
            android:background="?attr/colorButtonBackground"
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="?attr/colorButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONTINUE" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>